@@ -1,11 +1,11 @@
 Package: R2jags
-Version: 0.02-16
-Date: 2011-7-21
+Version: 0.02-17
+Date: 2011-7-28
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>, 
         Masanao Yajima <yajima@stat.columbia.edu>,
 Maintainer: Yu-Sung Su <suyusung@tsinghua.edu.cn>
-Depends: methods, R (>= 2.9.0), coda (>= 0.13), R2WinBUGS, rjags (>= 2.1.0-4)
-SystemRequirements: jags (>= 2.1.0)
+Depends: methods, R (>= 2.9.0), coda (>= 0.13), R2WinBUGS, rjags (>= 3-3)
+SystemRequirements: jags (>= 3.0.0)
 Description: Using this package to call jags from R.
 License: GPL (>= 2)
